Fix horizontal overflow issue in notes

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ textarea {
 }
 
 h3 {
-    font-weight: 350;
+    font-weight: 400;
     font-size: 1.5rem;
 }
 
@@ -173,7 +173,7 @@ h3 {
 
 .note .title {
     color: black;
-    flex-grow: 0;
+    width: 0;
 }
 
 .due,
@@ -373,7 +373,7 @@ h3 {
 #note-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(auto-fit, var(--note-height));
+    grid-template-rows: repeat(auto-fill, var(--note-height));
 }
 
 .task-list {
